# licuri

./: .gitignore  app.css  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.css  App.jsx  db.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChecklistItem.jsx  MiniCalendar.jsx  ProgressbarTask.jsx  StatusBadge.jsx  TaskSidebar.jsx  TaskView.jsx  Titlebar.jsx
src/hooks/: useTasks.js
