[package]
name = "planner-task"
version = "0.1.0"
edition = "2021"

[lib]
name = "planner_task_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "planner-task"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
